# cubotracer

./: Cargo.toml  README.md  output.ppm
examples/: spheres.rs  stanford-bunny.rs
src/: camera.rs  lib.rs  main.rs  output.ppm  ray.rs  world.rs
src/camera/: mod.rs
src/materials/: diffuse.rs  mod.rs  opaque.rs  specular.rs
src/math/: mod.rs
src/objects/: mod.rs  plane.rs  sphere.rs
src/objects/mesh/: mod.rs  triangle.rs
src/ppmhandler/: mod.rs
src/world/: mod.rs
